[metadata]
name = pypowervm
summary = Python binding for the PowerVM REST API
description-file = README.rst
author = IBM
author-email = kyleh@us.ibm.com,thorst@us.ibm.com,efried@us.ibm.com
home-page = http://github.com/pypowervm/
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7.9
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages = pypowervm

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = pypowervm/locale
domain = pypowervm

[update_catalog]
domain = pypowervm
output_dir = pypowervm/locale
input_file = pypowervm/locale/pypowervm.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = pypowervm/locale/pypowervm.pot
