[metadata]
name = pypowervm
summary = Python binding for the PowerVM REST API
description-file = README.rst
author = IBM
author-email = kyleh@us.ibm.com,thorst@us.ibm.com,efried@us.ibm.com,clbush@us.ibm.com
home-page = http://github.com/powervm/
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages = pypowervm

[compile_catalog]
directory = pypowervm/locale
domain = pypowervm

[init_catalog]
domain = pypowervm
output_dir = pypowervm/locale
input_file = pypowervm/locale/pypowervm.pot

[update_catalog]
domain = pypowervm
output_dir = pypowervm/locale
input_file = pypowervm/locale/pypowervm.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = pypowervm/locale/pypowervm.pot
